force-app/main/default/objects/GAP_Program__c/GAP_Program__c.object-meta.xml
<CustomObject>
    <description>[P2] I-Fresh 매출채권 분석용</description>
    <label>GAP 프로그램</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>