force-app/main/default/objects/GAP_Program__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>사용유무</label>
    <type>Checkbox</type>
</CustomField>