force-app/main/default/objects/GAP_Program__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>카테고리</label>
    <length>64</length>
    <type>Text</type>
</CustomField>