force-app/main/default/objects/GAP_Program__c/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <label>설명</label>
    <type>TextArea</type>
</CustomField>