force-app/main/default/objects/GAP_Program__c/fields/ExpectedView__c.field-meta.xml
<CustomField>
    <fullName>ExpectedView__c</fullName>
    <label>구현예상화면</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>