force-app/main/default/objects/GAP_Program__c/fields/ImplementationDesc__c.field-meta.xml
<CustomField>
    <fullName>ImplementationDesc__c</fullName>
    <label>구현상세내용</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>