force-app/main/default/objects/GAP_Program__c/fields/ImplementationType__c.field-meta.xml
<CustomField>
    <fullName>ImplementationType__c</fullName>
    <label>화면 구현방법</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LightningRecordPage</fullName>
            </value>
            <value>
                <fullName>LightningAppPage</fullName>
            </value>
            <value>
                <fullName>CustomObject</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>