force-app/main/default/objects/GAP_Program__c/fields/isImplementation__c.field-meta.xml
<CustomField>
    <fullName>isImplementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>구현여부</label>
    <type>Checkbox</type>
</CustomField>