force-app/main/default/objects/GAP_Program__c/fields/Level1__c.field-meta.xml
<CustomField>
    <fullName>Level1__c</fullName>
    <label>Level1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>