force-app/main/default/objects/GAP_Program__c/fields/Level2__c.field-meta.xml
<CustomField>
    <fullName>Level2__c</fullName>
    <label>Level2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>