force-app/main/default/objects/GAP_Program__c/fields/Merge__c.field-meta.xml
<CustomField>
    <fullName>Merge__c</fullName>
    <label>통합</label>
    <length>32</length>
    <type>Text</type>
</CustomField>