force-app/main/default/objects/GAP_Program__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <label>비고</label>
    <type>TextArea</type>
</CustomField>