force-app/main/default/objects/GAP_Program__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <label>화면</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>