force-app/main/default/objects/GAP_Program__c/fields/ScreenType__c.field-meta.xml
<CustomField>
    <fullName>ScreenType__c</fullName>
    <label>화면타입</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>전자결재</fullName>
            </value>
            <value>
                <fullName>검색</fullName>
            </value>
            <value>
                <fullName>리포트</fullName>
            </value>
            <value>
                <fullName>상세조회</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>