force-app/main/default/objects/GAP_Program__c/fields/useMethod__c.field-meta.xml
<CustomField>
    <fullName>useMethod__c</fullName>
    <label>사용방법</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>