force-app/main/default/objects/GAP_Program__c/fields/View_ID__c.field-meta.xml
<CustomField>
    <fullName>View_ID__c</fullName>
    <label>화면 ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>