force-app/main/default/objects/GAP_Program__c/listViews/AccountDeposit.listView-meta.xml
<ListView>
    <fullName>AccountDeposit</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>View_ID__c</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level1__c</field>
        <operation>contains</operation>
        <value>채권</value>
    </filters>
    <label>채권/여신/잔고</label>
</ListView>