force-app/main/default/objects/GAP_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>NAME</columns>
    <columns>View_ID__c</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <columns>isImplementation__c</columns>
    <columns>ImplementationType__c</columns>
    <columns>Merge__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>