force-app/main/default/objects/GAP_Program__c/listViews/ChainSaleFee.listView-meta.xml
<ListView>
    <fullName>ChainSaleFee</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>View_ID__c</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level1__c</field>
        <operation>contains</operation>
        <value>체인</value>
    </filters>
    <label>체인판매수수료</label>
</ListView>