force-app/main/default/objects/GAP_Program__c/listViews/CustomerCollateral.listView-meta.xml
<ListView>
    <fullName>CustomerCollateral</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>Category__c</columns>
    <columns>NAME</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <columns>ScreenType__c</columns>
    <columns>isImplementation__c</columns>
    <columns>Merge__c</columns>
    <columns>ImplementationType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level1__c</field>
        <operation>equals</operation>
        <value>담보/여신</value>
    </filters>
    <label>담보/여신</label>
</ListView>