force-app/main/default/objects/GAP_Program__c/listViews/Incentive.listView-meta.xml
<ListView>
    <fullName>Incentive</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>View_ID__c</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level1__c</field>
        <operation>contains</operation>
        <value>장려금</value>
    </filters>
    <label>장려금</label>
</ListView>