force-app/main/default/objects/GAP_Program__c/listViews/SalesAdjustment.listView-meta.xml
<ListView>
    <fullName>SalesAdjustment</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>View_ID__c</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level1__c</field>
        <operation>contains</operation>
        <value>매출마감</value>
    </filters>
    <label>매출마감 관리</label>
</ListView>