force-app/main/default/objects/GAP_Program__c/listViews/SalesReport.listView-meta.xml
<ListView>
    <fullName>SalesReport</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>View_ID__c</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <columns>Merge__c</columns>
    <columns>useMethod__c</columns>
    <columns>Category__c</columns>
    <columns>isImplementation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level1__c</field>
        <operation>contains</operation>
        <value>매출실적</value>
    </filters>
    <label>매출실적관리</label>
</ListView>