force-app/main/default/objects/GAP_Program__c/listViews/TaxBill.listView-meta.xml
<ListView>
    <fullName>TaxBill</fullName>
    <columns>Level1__c</columns>
    <columns>Level2__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>View_ID__c</columns>
    <columns>Desc__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level1__c</field>
        <operation>contains</operation>
        <value>세금계산서</value>
    </filters>
    <label>세금계산서</label>
</ListView>